@startuml
!theme plain

skinparam classAttributeIconSize 0
skinparam class {
    BackgroundColor white
    BorderColor black
    ArrowColor black
}

package "Entities (JPA)" {
    class TroubleTicket {
        - Long id [PK, sequential]
        - String externalId [not null, unique]
        - Long serviceId [not null]
        - String description [not null, TEXT]
        - TroubleTicketStatus status [default=NEW]
        - Long tenantId [FK, not null]
        - OffsetDateTime createdAt [auto, not null]
        - OffsetDateTime updatedAt [auto]
        --
        + addNote(Note note)
        + getters/setters
    }

    class Note {
        - Long id [PK, sequential]
        - String text [not null, TEXT]
        - OffsetDateTime createdAt [auto, not null]
        - OffsetDateTime updatedAt [auto]
        - Long troubleTicketId [FK, not null]
        --
        + getters/setters
    }

    class Tenant {
        - String id [PK, length=50]
        - String name [not null, length=255]
        - OffsetDateTime createdAt [auto, not null]
        - OffsetDateTime updatedAt [auto]
        --
        + getters/setters
    }

    enum TroubleTicketStatus {
        NEW
        ACKNOWLEDGED
        IN_PROGRESS
        RESOLVED
        CLOSED
        REJECTED
    }
}

TroubleTicket "1" --o "0..*" Note : has >
Tenant "1" --o "0..*" TroubleTicket : owns >

@enduml